# kami-engine-cfd

./: Cargo.toml  README.md  bb.edn  deps.edn
.github/workflows/: ci.yml
docs/adr/: 0001-lbm-solver.md
src/: d3.rs  kami_cfd.cljc  lib.rs  main.rs  mesh.rs
src/kami_cfd/: d3.cljc  mesh.cljc  runner.clj
src/kami_engine/cfd/: contract.cljc
test/: kami_cfd_test.cljc
test/kami_engine/cfd/: contract_test.cljc
tests/: drag.rs  drag3d.rs  mesh.rs
